sql and pydantic model work now

--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,10 @@ name = "pypi"
 
 [packages]
 sqlalchemy = "*"
-pydantic = "*"
 fastapi = "*"
 uvicorn = "*"
 psycopg2-binary = "*"
+pydantic = {extras = ["email"], version = "*"}
 
 [dev-packages]
 
