--- a/Pipfile
+++ b/Pipfile
@@ -4,11 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-sqlalchemy = "*"
-fastapi = "*"
-uvicorn = "*"
-psycopg2-binary = "*"
-pydantic = {extras = ["email"], version = "*"}
+sqlalchemy = "~=2.0"
+fastapi = "~=0.110"
+uvicorn = "~=0.29"
+psycopg2-binary = "~=2.9"
+pydantic = {extras = ["email"], version = "~=2.1"}
 
 [dev-packages]
 
