--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ fastapi = "~=0.110"
 uvicorn = "~=0.29"
 psycopg2-binary = "~=2.9"
 pydantic = {extras = ["email"], version = "~=2.1"}
+python-dotenv = "*"
 
 [dev-packages]
 
