--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ uvicorn = "~=0.29"
 psycopg2-binary = "~=2.9"
 pydantic = {extras = ["email"], version = "~=2.1"}
 python-dotenv = "*"
+alembic = "*"
 
 [dev-packages]
 
