--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ passlib = {extras = ["bcrypt"], version = "*"}
 python-multipart = "*"
 libgravatar = "*"
 fastapi-mail = "*"
+bcrypt = "*"
 
 [dev-packages]
 
